--- a/TestContainer/TestContainer/MainPage.xaml
+++ b/TestContainer/TestContainer/MainPage.xaml
@@ -3,20 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TestContainer"
              x:Class="TestContainer.MainPage"
-             xmlns:controls="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions">
+             xmlns:controls="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms">
 
-        <controls:CarouselViewControl x:Name="view">
+    <!--<controls:CarouselViewControl x:Name="view">
             <controls:CarouselViewControl.ItemTemplate>
                 <DataTemplate>
-                    <local:PinchAndPanContainer BackgroundColor="Gray" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                <local:PinchAndPanContainer BackgroundColor="Gray" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                         <local:PinchAndPanContainer.Content>
-                            <Image Source="{Binding .}" Aspect="AspectFit" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                            <ffimageloading:CachedImage Source="{Binding .}" Aspect="AspectFit" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
                         </local:PinchAndPanContainer.Content>
                     </local:PinchAndPanContainer>
+                <StackLayout>
+                    <ScrollView>
+                        <ffimageloading:CachedImage Source="{Binding .}"/>
+                    </ScrollView>
+                </StackLayout>
                 </DataTemplate>
             </controls:CarouselViewControl.ItemTemplate>
-        </controls:CarouselViewControl>
-            
+        </controls:CarouselViewControl>-->
 
-
+    <StackLayout>
+        <ScrollView>
+            <ffimageloading:CachedImage Source="p2.jpg"/>
+        </ScrollView>
+    </StackLayout>
 </ContentPage>
