Differentiate DispatchTouchEvent and Scaling. Fix translation jankiness.

--- a/TestContainer/TestContainer/MainPage.xaml
+++ b/TestContainer/TestContainer/MainPage.xaml
@@ -19,7 +19,7 @@
         </controls:CarouselViewControl.ItemTemplate>
     </controls:CarouselViewControl>-->
     <ScrollView>
-        
+        <ffimageloading:CachedImage Source="p2.jpg"/>
     </ScrollView>
 
 </ContentPage>
