--- a/TestContainer/TestContainer/MainPage.xaml
+++ b/TestContainer/TestContainer/MainPage.xaml
@@ -18,8 +18,6 @@
             </DataTemplate>
         </controls:CarouselViewControl.ItemTemplate>
     </controls:CarouselViewControl>-->
-    <ScrollView>
-        <ffimageloading:CachedImage Source="p2.jpg"/>
-    </ScrollView>
+    <ContentView></ContentView>
 
 </ContentPage>
